customer issues v1 fix
